{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 220,
  "lineage": "6f238fda-b2cd-8df1-6c75-f5297b3a23f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b0956d834a7068e",
            "association_id": "eipassoc-00dced6ea5a557481",
            "domain": "vpc",
            "id": "eipalloc-09b0956d834a7068e",
            "instance": "i-0ce528b8e67aac52e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-052c7cee54dfd3d72",
            "private_dns": "ip-10-0-101-19.ec2.internal",
            "private_ip": "10.0.101.19",
            "public_dns": "ec2-3-223-200-47.compute-1.amazonaws.com",
            "public_ip": "3.223.200.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "hr"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.terraform_remote_state.eks",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b3aef6bc281a13b2",
            "arn": "arn:aws:ec2:us-east-1:262485716661:instance/i-0ce528b8e67aac52e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce528b8e67aac52e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-052c7cee54dfd3d72",
            "private_dns": "ip-10-0-101-19.ec2.internal",
            "private_ip": "10.0.101.19",
            "public_dns": "ec2-44-202-160-119.compute-1.amazonaws.com",
            "public_ip": "44.202.160.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd8663bd68aa1e7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a91f4860bd41d564",
            "tags": {
              "Name": "hr-dev-BastionHost",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-BastionHost",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "hr-dev-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-03f3c61725ed084c4"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.terraform_remote_state.eks",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:security-group/sg-03f3c61725ed084c4",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-03f3c61725ed084c4",
            "ingress": [],
            "name": "hr-dev-public-bastion-sg-20240613111006267100000001",
            "name_prefix": "hr-dev-public-bastion-sg-",
            "owner_id": "262485716661",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-dev-public-bastion-sg",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-public-bastion-sg",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0fe83ee4b5b9667a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.eks"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1463450558",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03f3c61725ed084c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.eks",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-263223320",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f3c61725ed084c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.eks",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}